--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,6 +29,26 @@
         <input class="form-input" type="text" id="lastname-signup" />
       </div>
       <div class="form-group">
+        <label for="address-signup">address:</label>
+        <input class="form-input" type="text" id="address-signup" />
+      </div>
+      <div class="form-group">
+        <label for="city-signup">city:</label>
+        <input class="form-input" type="text" id="city-signup" />
+      </div>
+      <div class="form-group">
+        <label for="state-signup">state:</label>
+        <input class="form-input" type="text" id="state-signup" />
+      </div>
+      <div class="form-group">
+        <label for="zip-signup">zip:</label>
+        <input class="form-input" type="text" id="zip-signup" />
+      </div>
+      <div class="form-group">
+        <label for="phone-signup">phone:</label>
+        <input class="form-input" type="text" id="phone-signup" />
+      </div>
+      <div class="form-group">
         <label for="email-signup">email:</label>
         <input class="form-input" type="text" id="email-signup" />
       </div>
