updated all paths for htmls to pullup pages through link

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,9 +7,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="#goldMember">About Gold Club</a>
-            <a class="nav-link" href="/findreservation.html">Find Reservation</a>
+            <a class="nav-link" href="/reservation">Find Reservation</a>
             <a class="nav-link" data-bs-toggle="modal" href="#exampleModal">Sign In/Enroll</a>
 
             
@@ -47,7 +47,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Sign In</button>
-        <a type="button" class="btn btn-primary" href="/signup.html">Sign Up</a>
+        <a type="button" class="btn btn-primary" href="/signup">Sign Up</a>
       </div>
     </div>
   </div>
@@ -125,7 +125,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-               <a class="btn-success" href="/carlist.html">MORE</a>
+               <a class="btn-success" href="/carlist">MORE</a>
                 </div>
               </div>
         </div>
