--- a/views/reservation.handlebars
+++ b/views/reservation.handlebars
@@ -7,7 +7,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
             
             <a class="nav-link" data-bs-toggle="modal" href="#exampleModal">Sign In/Enroll</a>
           </div>
@@ -32,7 +32,7 @@
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
               <button type="button" class="btn btn-primary">Sign In</button>
-              <a type="button" class="btn btn-primary" href="/signup.html">Sign Up</a>
+              <a type="button" class="btn btn-primary" href="/signup">Sign Up</a>
             </div>
           </div>
         </div>
