--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,25 +3,25 @@
     <div class="container">
         <div class="row">
           <div class="col-sm-3">
-            <form action="/action_page.php">
+            <form action="/action_page.php" class= "form signup-form">
                 <label for="fname">First name:</label><br>
-                <input type="text" id="first_name" name="first_name"><br>
+                <input type="text" id="firstname-signup" name="first_name"><br>
                 <label for="lname">Last name:</label><br>
-                <input type="text" id="last_name" name="last_name"><br>
+                <input type="text" id="lastname-signup" name="last_name"><br>
                 <label for="address">Address:</label><br>
-                <input type="text" id="address" name="address"><br>
+                <input type="text" id="address-signup" name="address"><br>
                 <label for="city">City:</label><br>
-                <input type="text" id="city" name="city"><br>
+                <input type="text" id="city-signup" name="city"><br>
                 <label for="state">State:</label><br>
-                <input type="text" id="state" name="state"><br><br>
+                <input type="text" id="state-signup" name="state"><br><br>
                 <label for="zip">Zip Code:</label><br>
-                <input type="text" id="zip" name="zip"><br><br>
+                <input type="text" id="zip-signup" name="zip"><br><br>
                 <label for="phone">Phone:</label><br>
-                <input type="text" id="phone" name="phone"><br><br>
+                <input type="text" id="phone-signup" name="phone"><br><br>
                 <label for="email">Email:</label><br>
-                <input type="text" id="email" name="email"><br><br>
+                <input type="text" id="email-signup" name="email"><br><br>
                 <label for="password">Password:</label><br>
-                <input type="text" id="password" name="password" ><br><br>
+                <input type="text" id="password-signup" name="password" ><br><br>
                 <label for="confirm_password"> Confirm Password:</label><br>
                 <input type="text" id="confirm_password" name="confirm_password"><br><br>
                 <input type="submit" value="Submit">
@@ -34,5 +34,7 @@
                 <img class="signUp" src="assets/pexels-matthias-zomer-618158.jpg">
               </div>
 
+
   
 </div>
+<script src="./js/login.js"></script>
