finished get reservation by id so info can be displayed

--- a/views/carlist.handlebars
+++ b/views/carlist.handlebars
@@ -7,9 +7,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
             
-            <a class="nav-link"  href="/findreservation.html">Find Reservation</a>
+            <a class="nav-link"  href="/reservation">Find Reservation</a>
             
 
             
@@ -33,3 +33,5 @@
             <label class="btn btn-outline-primary" for="btncheck1">Select</label>
         </div>
     </div>
+
+    <script src="./js/login.js"></script>
