--- a/views/reservation.handlebars
+++ b/views/reservation.handlebars
@@ -41,12 +41,13 @@
 
 <br>
 <br>
-    <div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Type Reservation Number# or Email" aria-label="Reservation Number" aria-describedby="button-addon2">
-  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
-</div>
+    <form class="input-group mb-3 form searchbar">
+  <input type="text" id="resnumber" class="form-control" placeholder="Type Reservation Number# or Email" aria-label="Reservation Number" aria-describedby="button-addon2">
+  <input class="btn btn-outline-secondary" type="submit" value = "search">
+</form>
       
    
      
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+   
+    <script src="./js/res.js"></script>
