--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -21,7 +21,17 @@
 <br>
     <!-- User Criteria -->
     <div class="container-fluid">
-    <input class="col-md-6" placeholder="Location"></input>
+     <div class="input-group mb-3">
+  <div class="input-group-prepend">
+    <label class="input-group-text" for="inputGroupSelect01">Locations</label>
+  </div>
+  <select class="custom-select" id="inputGroupSelect01">
+    <option selected>Choose...</option>
+    {{#each agencys}}
+    <option value={{id}}>{{agencyName}}</option>
+    {{/each}}
+  </select>
+</div>
     <input class="col-sm-4" placeholder="Pick Up Date"></input>
     <input class="col-sm-4" placeholder="Return Date"></input>
     <input class="age" placeholder="Renter's Age 25+"></input>
