--- a/views/reservation.handlebars
+++ b/views/reservation.handlebars
@@ -46,7 +46,48 @@
   <input class="btn btn-outline-secondary" type="submit" value = "search">
 </form>
       
+   <div class="container">
+        <table class="table table-striped">
+     <thead>
+       <tr>
+         <th scope="col"><h1>Reservation Results</h1></th>
+       </tr>
+     </thead>
+     <thead>
+      <tr>
+        <th scope="col">Reservation Number</th>
+        <th scope="col">Location</th>
+        <th scope="col">Pick Up Time</th>
+        <th scope="col">Drop Off Time</th>
+        <th scope="col">Vehicle</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>{{placeholder}}</td>
+        <td>{{placeholder}}</td>
+        <td>{{placeholder}}</td>
+        <td>{{placeholder}}</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>{{placeholder}}</td>
+        <td>{{placeholder}}</td>
+        <td>{{placeholder}}</td>
+        <td>{{placeholder}}</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>{{placeholder}}</td>
+        <td>{{placeholder}}</td>
+        <td>{{placeholder}}</td>
+        <td>{{placeholder}}</td>
+      </tr>
+    </tbody>
+   </table>
    
+      </div>
      
 
    
