--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -48,17 +48,17 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-         <form action="/api/customer/login" method="POST">
         <div class="container">
-            <input class="col-md-6" id = "email"   placeholder="Email"></input>
-            <input class="col-sm-4" id = "password" placeholder="Password"></input>     
+            <input class="col-md-6" placeholder="Username"></input>
+            <input class="col-sm-4" placeholder="Password"></input>
+        
+            
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Sign In</button>
+        <button type="button" class="btn btn-primary">Sign In</button>
         <a type="button" class="btn btn-primary" href="/signup">Sign Up</a>
       </div>
-      </form>
     </div>
   </div>
 </div>
