--- a/views/reservation.handlebars
+++ b/views/reservation.handlebars
@@ -24,7 +24,7 @@
             </div>
             <div class="modal-body">
               <div class="container">
-                  <input class="col-md-6" placeholder="Email"></input>
+                  <input class="col-md-6" placeholder="Username"></input>
                   <input class="col-sm-4" placeholder="Password"></input>
               
                   
