Closed handlebars (error)

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -133,6 +133,8 @@
            <a class="btn-success" href="/carlist">MORE DETAILS</a>
         </div>
           </div>
+          {{/each}}
+
           <div class="col">
       {{#each car}}
       <div class="card" style="width: 18rem;">
@@ -146,6 +148,8 @@
             <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
             <a class="btn-success" href="/carlist">MORE DETAILS</a>
         </div>
+        {{/each}}
+
           <div class="col">
             <div class="card" style="width: 18rem;">
                <a class="btn-success" href="/carlist">VIEW MORE CARS</a>
@@ -209,6 +213,6 @@
 
 
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+   
     <script src="./js/login.js"></script>
 </body>
