fixed login final

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -50,8 +50,8 @@
       <div class="modal-body">
          <form action="/api/customer/login" method="POST">
         <div class="container">
-            <input class="col-md-6" id = "email"   placeholder="Email"></input>
-            <input class="col-sm-4" id = "password" placeholder="Password"></input>     
+            <input class="col-md-6 form-control" id = "email"  type ="email" name = "email" placeholder="Email"></input>
+            <input class="col-sm-4 form-control" id = "password" name = "password" placeholder="Password"></input>     
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -214,5 +214,5 @@
 
     
    
-    <script src="./js/login.js"></script>
+    
 </body>
