Moved Reservation search bar to Homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,7 +20,10 @@
 <br>
 <br>
    
-
+    <form class="input-group mb-3 form searchbar">
+  <input type="text" id="resnumber" class="form-control" placeholder="Type Reservation Number# or Email" aria-label="Reservation Number" aria-describedby="button-addon2">
+  <input class="btn btn-outline-secondary" type="submit" value = "search">
+</form>
 
 <!-- Modal Properties-->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
