UIpdated image path

--- a/views/reservation.handlebars
+++ b/views/reservation.handlebars
@@ -43,7 +43,7 @@
 <div class="card mb-3" style="max-width: 540px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="/profilepic.png" class="img-fluid rounded-start" alt="...">
+        <img src="../public/assets/profilepic.png" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
