--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -171,6 +171,8 @@
             <button class="btn btn-success">Join Gold</button>
           </div>
 
+          <script src="./js/res.js"></script>
+
       
       
    
