--- a/views/reservation.handlebars
+++ b/views/reservation.handlebars
@@ -47,7 +47,7 @@
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h2 class="card-title">{{username}}</h2>
+          <h2 class="card-title">{{first_name}}</h2>
           
         </div>
       </div>
