--- a/views/carlist.handlebars
+++ b/views/carlist.handlebars
@@ -50,6 +50,8 @@
             <h5 class="card-text">{{make}}</h5>
             <p>{{model}}</p>
             <p>{{model_year}}</p>
+            <p>{{current_mileage}}</p>
+            <p>{{last_service_dt}}</p>
           </div>
           <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
             <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
