Changed link name

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,7 +9,7 @@
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="#goldMember">About Gold Club</a>
-            <a class="nav-link" href="/reservation">Find Reservation</a>
+            <a class="nav-link" href="/reservation">Profile</a>
             <a class="nav-link" data-bs-toggle="modal" href="#exampleModal">Sign In/Enroll</a>
 
             
